[tool.poetry]
name = "combine-feedbacks"
version = "0.1.0"
description = "combine results from multiple Moodle Feedback activities"
authors = ["phette23 <phette23@gmail.com>"]
license = "ECL-2.0"
readme = "README.md"
packages = [{include = "combine_feedbacks"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
