[project]
name = "combine-feedbacks"
version = "0.1.0"
description = "combine results from multiple Moodle Feedback activities"
authors = [{name = "Eric Phetteplace", email = "ephetteplace@cca.edu"}]
license = "ECL-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.5",
    "python-dotenv==1.1.1",
]
